Newest version of site with 2016 awards in progress of building

--- a/awards/2016.html
+++ b/awards/2016.html
@@ -5,7 +5,7 @@
 <!--[if IE 9]>         <html class="no-js ie ie9 lt-ie10" lang="en-US"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js ffly" lang="en-US"> <!--<![endif]-->
 <head>
-    <title>Nott Tuesday: Winners of Tech Startup of the Year Awards 2015</title>
+    <title>Nott Tuesday: Winners of Tech Startup of the Year Awards 2016</title>
     <meta name="description" content="Winners of Tech Startup of the Year and Startup of the Future awards, as decided by the judging panel on 17th November 2015">
 
     <!-- META -->
@@ -29,8 +29,8 @@
 <header class="wrapper site-header header__bg" role="banner">
     <div class="container">
         <a class="logo" href="/"><img src="../img/logo.png" alt="Nott Tuesday"></a>
-        <h1>Tech Startup of the Year Awards 2015</h1>
-        <p>We searched for Nottingham's <em>Tech Startup</em> and <em>Future Startups</em> of the year. On the night, finalists pitched their business to our panel of expert judges, who selected our winners: <a href="http://www.onomi.co.uk/">Onomi</a> and <a href="https://twitter.com/instaplayUK">Instaplay</a>.</p>
+        <h1>Tech Startup of the Year Awards 2016</h1>
+        <p>It’s almost that time again! Welcome to the start up awards 2017. The start up awards takes place on February 21st at 6.30pm. Entries are due to close at 5pm on the 10th of February. </p>
     </div>
 </header>
 
@@ -50,9 +50,9 @@
 
         <article class="award">
             <h1 class="award-title">New Startup of the Year</h1>
-            <p class="award-desc">This award is for new startups who have launched their service or product within the last two years. The startups can pre-revenue and the emphasis here is on potential as well as success so far. <span class="award-cash">The winner will receive £2,500 in cash plus the following prizes:</span></p>
+            <p class="award-desc">This award is for new startups who have launched their service or product within the last two years. The startups can be pre-revenue and the emphasis here is on potential as well as success so far.  <span class="award-cash">The winner will receive £1000 in cash</span> - our sponsors are still expanding and the prize list is growing. Follow us on twitter for additional prize updates!</p>
             <div class="prizes cf">
-                <div class="award-prize">
+<!--                <div class="award-prize">
                     <a href="http://ignite100.com/" target="_blank">
                         <img src="../img/awards-2015/ignite.png" alt="Ignite"/>
                     </a>
@@ -69,7 +69,7 @@
                         <img src="../img/awards-2015/seedcamp.png" alt="Seedcamp"/>
                     </a>
                     <p>A one-on-one pitch review with Carlos Eduardo Espinal, partner at Seedcamp.</p>
-                </div>
+                </div>-->
             </div>
             <hr>
             <div class="award-sponsor cf">
@@ -129,43 +129,36 @@
     <div class="container">
 
         <h2 class="h1 judge-title">The judging panel</h2>
-        <ul class="judge-list">
-            <li class="judge">
-                <a href="https://uk.linkedin.com/in/vimlaappadoo" target="_blank">
-                    <img class="judge__photo" src="../img/awards-2015/judge-appadoo.jpg" alt="Vimla Appadoo">
-                </a>
-                <a class="judge__name" href="https://uk.linkedin.com/in/vimlaappadoo" target="_blank">Vimla Appadoo</a>
-                <span class="judge__role">Program Manager at dotforge</span>
-            </li>
-            <li class="judge">
-                <a href="https://uk.linkedin.com/pub/lewis-stringer/20/709/b24" target="_blank">
-                    <img class="judge__photo" src="../img/placeholder.jpg" alt="Lewis Stringer">
-                </a>
-                <a class="judge__name" href="https://uk.linkedin.com/pub/lewis-stringer/20/709/b24" target="_blank">Lewis Stringer</a>
-                <span class="judge__role">Business Finance Manager at Nottingham City Council</span>
-            </li>
-            <li class="judge">
-                <a href="https://uk.linkedin.com/in/jonathanenglish" target="_blank">
-                    <img class="judge__photo" src="../img/awards-2015/judge-english.jpg" alt="Jonathan English">
-                </a>
-                <a class="judge__name" href="https://uk.linkedin.com/in/jonathanenglish" target="_blank">Jonathan English</a>
-                <span class="judge__role">Managing Director, Skeleton Productions</span>
-            </li>
-            <li class="judge">
-                <a href="https://www.linkedin.com/profile/view?id=5534028" target="_blank">
-                    <img class="judge__photo" src="../img/awards-2015/judge-cawdron.jpg" alt="Robert Cawdron">
-                </a>
-                <a class="judge__name" href="https://www.linkedin.com/profile/view?id=5534028" target="_blank">Robert Cawdron</a>
-                <span class="judge__role">Finance Growth Manager, Grant Thornton</span>
-            </li>
-            <li class="judge">
-                <a href="https://uk.linkedin.com/in/davideilbeck" target="_blank">
-                    <img class="judge__photo" src="../img/placeholder.jpg" alt="David Eilbeck">
-                </a>
-                <a class="judge__name" href="https://uk.linkedin.com/in/davideilbeck">David Eilbeck</a>
-                <span class="judge__role">Managing Director, G2 Innovation</span>
-            </li>
-        </ul>
+            <ul class="judge-list">
+                <li class="judge">
+                    <a href="https://www.linkedin.com/in/tom-goff-4037954" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/tomgoff.jpg" alt="Tom Goff">
+                    </a>
+                    <a class="judge__name" href="https://www.linkedin.com/in/tom-goff-4037954" target="_blank">Tom Goff</a>
+                    <span class="judge__role">Corporate Associate at Eversheds</span>
+                </li>
+                <li class="judge">
+                    <a href="https://www.linkedin.com/in/mark-onyett-354a29" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/markonyett.jpg" alt="Mark Onyett">
+                    </a>
+                    <a class="judge__name" href="https://www.linkedin.com/in/mark-onyett-354a29" target="_blank">Mark Onyett</a>
+                    <span class="judge__role">Partner at Blenheim Chalcot</span>
+                </li>
+                <li class="judge">
+                    <a href="https://www.linkedin.com/in/robertcawdron" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/robertcawdron.jpg" alt="Robert Cawdron">
+                    </a>
+                    <a class="judge__name" href="https://www.linkedin.com/in/robertcawdron" target="_blank">Robert Cawdron</a>
+                    <span class="judge__role">Director, Investments at British Business Bank</span>
+                </li>
+                <li class="judge">
+                    <a href="https://uk.linkedin.com/in/davideilbeck" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/davideilbeck.jpg" alt="David Eilbeck">
+                    </a>
+                    <a class="judge__name" href="https://uk.linkedin.com/in/davideilbeck">David Eilbeck</a>
+                    <span class="judge__role">Managing Director, G2 Innovation</span>
+                </li>
+            </ul>
 
         <!-- <hr>
 
@@ -260,36 +253,79 @@
 </div>
 
 <footer class="wrapper site-footer" role="contentinfo">
-      <div class="container">
-        <div class="about">
-            <h2>About Nott Tuesday</h2>
-            <p>Each month we have stimulating speakers giving talks on the challenges of starting and running a technology business, practical guidance on operating a business such as finding funding and exploring future technologies for new opportunities.</p>
-            <p>The goal of <a href="http://www.meetup.com/Nott-Tuesday-Getting-Nottinghams-tech-scene-together/">our Meetup</a> is to bring together technology people, startups and companies. Our vision is to bring the Nottingham tech scene together to create great conversations and fascinating insight.</p>
-            <p>Each year we also run the <a href="/awards/2015.html">Tech Startup Awards</a> which celebrates the most promising new tech startup businesses in Nottingham.</p>
-        </div>
+    <div class="container">
+      <div class="about">
+      <h2>About</h2>
+          <p>Nott Tuesday, bringing together people in technology, startups and companies to create conversation, innovation &amp; insight</p>
+          <a href="https://www.meetup.com/Nott-Tuesday-Getting-Nottinghams-tech-scene-together/"><p>Join the meetup group</p></a>
+      </div>
 
-        <div class="contact">
-            <h2>Contact The Organisers</h2>
-            <p>Nott Tuesday is jointly organised on a voluntary basis by Nick Barker and <a href="https://twitter.com/jhuskisson">Jamie Huskisson</a>.</p>
-            <p>If you&rsquo;d like to feedback, propose a talk or recommend a speaker, please contact <a href="mailto:nick.barker@awaremonitoring.com">nick.barker@awaremonitoring.com</a>, <a href="mailto:jamie@wearejh.com">jamie@wearejh.com</a> or <a href="http://twitter.com/notttuesday">@notttuesday</a>.</p>
-            <p>We recommend subscribing to our social accounts:<br/>
-                - <a href="http://www.meetup.com/Nott-Tuesday-Getting-Nottinghams-tech-scene-together/">Meetup</a> (for notifications on events)<br/>
-                - <a href="https://twitter.com/NottTuesday">Twitter</a> (for the latest news)</p>
-        </div>
+<div class="contact">
+    <h2>Contact The Organisers</h2>
+    <p>Nott Tuesday is run by Nick Barker, <a href="https://twitter.com/jhuskisson">Jamie Huskisson</a> &amp; <a href="https://twitter.com/martinsandhu">Martin Sandhu</a> .</p>
+    <p>If you’d like to feedback about a previous event, propose a talk or recommend a speaker you can reach out to us in the following ways</p>
+    <p>
+    <br>- Email: <a href="mailto:nick.barker@awaremonitoring.com">nick.barker@awaremonitoring.com</a> 
+    <br>- Tweet us: <a href="http://twitter.com/notttuesday">@notttuesday</a>.</p>
+</div>
 
-        <p class="legal">&copy;2008-2016 <a href="http://notttuesday.com/">Nott Tuesday</a>. <a href="https://github.com/WeareJH/notttuesday">Fork this site on Github</a>.</p>
-    </div>
+
+ <p class="legal">&copy;2008-
+    <script type="text/javascript">
+    document.write(new Date().getFullYear());
+    </script> <a href="http://notttuesday.com/">Nott Tuesday</a>.</p>
+</div>
+
 </footer><!-- end .site-footer -->
 
 <!-- Google Analytics -->
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
     ga('create', 'UA-9801978-12', 'auto');
     ga('send', 'pageview');
 </script>
+
+    
+    <script>
+      function initMap() {
+        var uluru = {lat: 52.955781, lng: -1.142951};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 18,
+          center: uluru,
+          scrollwheel:false,
+          styles:[{"stylers":[{"hue":"#1acd55"},{"saturation":0}]},{"featureType":"road","elementType":"geometry","stylers":[{"lightness":100},{"visibility":"simplified"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"off"}]}]
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+
+
+
+
+        google.maps.event.addListener(map, 'mousedown', function(event){
+          this.setOptions({scrollwheel:true});
+        });
+        google.maps.event.addListener(map, 'onclick', function(event){
+          self = this;
+          timer = setTimeout(function() {
+            self.setOptions({scrollwheel:true});
+          }, 750);
+        });
+        google.maps.event.addListener(map, 'mouseout', function(event){
+          this.setOptions({scrollwheel:false});
+          clearTimeout(timer);
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDf1aTknX_lskpM7XlD4LgHdKZqIpKJE9A&callback=initMap">
+    </script>
+
 
 </body>
 </html>
