--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
     <div class="container">
       <div class="about">
       <h2>About</h2>
-          <p>Nott Tuesday, bringing together people in technology, startups and companies to create conversation, innovation & insight</p>
+          <p>Nott Tuesday, bringing together people in technology, startups and companies to create conversation, innovation &amp; insight</p>
+          <a href="https://www.meetup.com/Nott-Tuesday-Getting-Nottinghams-tech-scene-together/"><p>Join the meetup group</p></a>
       </div>
 
 <div class="contact">
