Added AI file for adding future content, also added Ti.To link for easy ticket purchase

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="pragma" content="no-cache" />
 
     <!-- ICONS -->
     <link href="favicon.ico" rel="icon" type="image/ico">
     <meta name="msapplication-TileColor" content="#fff">
     <meta name="msapplication-TileImage" content="favicon-144.png">
     <link rel="apple-touch-icon-precomposed" href="favicon-152.png">
+
+    <!-- THEME COLORS -->
+    <meta name="theme-color" content="#1acd55">
+    <meta name="msapplication-navbutton-color" content="#1acd55">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1acd55">
 
     <!-- CSS -->
     <script src="//use.typekit.net/htk0tvr.js"></script>
@@ -47,24 +53,19 @@
         <div class="summary">
             <h2 class="title">Next Event:</h2>
             <ul class="details">
-                <li class="date"><i class="date-icon"></i> January 17th</li>
+                <li class="date"><i class="date-icon"></i> February 21st</li>
                 <li class="time"><i class="icon time-icon"></i> 6:30pm&ndash;10:30pm</li>
                 <li class="venue"><i class="icon location-icon"></i> <a href="https://www.google.co.uk/maps/place/Antenna,+9A+Beck+St,+Nottingham+NG1+1EQ/@52.955938,-1.143181,17z/data=!4m2!3m1!1s0x4879c17de0dc5f45:0x4d78304762fccbec" target="_blank">Antenna</a></li>
             </ul>
-            <p class="rsvp"><a class="button" href="https://www.meetup.com/Nott-Tuesday-Getting-Nottinghams-tech-scene-together/events/235654948/">RSVP via Meetup</a>
-            <!-- <tito-button class="button tito-button" event="notttuesday/tech-startups-nottingham-economy"></tito-button> -->
+            <!--<p class="rsvp"><a class="button" href="https://www.meetup.com/Nott-Tuesday-Getting-Nottinghams-tech-scene-together/events/235654948/">RSVP via Meetup</a>-->
+            <div class="tito-wrap"><tito-button class="button tito-button" event="notttuesday/21-02-2017-tech-startup-awards">Free Ticket</tito-button></div>
             </p>
         </div>
         <div class="speaker">
-            <img src="https://pbs.twimg.com/profile_images/650332968527990784/_TdStfBI.png" alt="Rob Wilmot photo" class="speaker__icon">
-            <h3 class="topic">"Crowdsourcing­ and the Democratisation of Innovation" with  <a href="https://twitter.com/RobWilmot">Rob Wilmot</a></h3>
+            <img src="img/awards-2016/tech-startups.jpg" alt="Startup Awards 2017" class="speaker__icon">
+            <h3 class="topic tsa-2016">Tech Startup of the year awards</h3>
             <div class="bio">
-                <p>This month's talk and speaker: "Crowdsourcing and the Democratisation of Innovation" with Rob Wilmot </p>
-
-
-                <p>Buried deep within organisations and communities there are potentially tranformational ideas that never see the light of day. </p>
-
-                <p>This week at Nott Tuesday Rob Wilmot will be discussing how crowd sourcing opens up opportunities for communities both to engage with and innovate in society today. </p>
+                <p>This February 2017 Nott Tuesday celebrates Nottingham's newest generation of tech startups from the past year. They compete for a <b>cash prize of up to £1000</b> (So far, the sponsors are still rolling in!) and face-to-face sit-downs with the hottest startup programs around. </p>
             </div>
         </div> 
 
@@ -73,39 +74,82 @@
         <section class="sponsors">
             <header>
                 <h2>Event Sponsors</h2>
-                <p class="lede">Our sponsors help us get great speakers in and provide drinks at our monthly events.</p>
+                <p>Our sponsors help us get great speakers in and provide drinks at our monthly events.</p>
             </header>
             <ul class="sponsor-list">
               <li class="sponsor">
                    <a href="http://www.eversheds.com" target="_blank"><img class="sponsor__logo" src="img/logo-eversheds.png" alt="Eversheds"></a>
-                   <a href="http://www.eversheds.com" target="_blank">Eversheds</a> operates at the leading edge of business. They regularly advise on cases on behalf of the world's most powerful corporations and financial institutions.
+                   <a href="http://www.eversheds.com" target="_blank">Eversheds</a> <p>operates at the leading edge of business. They regularly advise on cases on behalf of the world's most powerful corporations and financial institutions.</p>
               </li>
               <li class="sponsor">
                      <a href="http://www.paypal.com/" target="_blank"><img class="sponsor__logo" src="img/logo-paypal.png" alt="Paypal"></a>
-                     <a href="http://www.paypal.com/" target="_blank">Paypal</a> makes it easy for businesses to get paid. Whether you&rsquo;re online or offline, in your shop or on the road, one simple PayPal account is all you need.
+                     <a href="http://www.paypal.com/" target="_blank">Paypal</a> <p>makes it easy for businesses to get paid. Whether you&rsquo;re online or offline, in your shop or on the road, one simple PayPal account is all you need.</p>
                 </li>
                 <li class="sponsor">
                     <a href="http://www.wearejh.com/" target="_blank"><img class="sponsor__logo" src="img/logo-jh.png" alt="JH"></a>
-                    <a href="http://www.wearejh.com/" target="_blank">JH</a> is a web agency working with exciting clients on challenging projects. They specialise in producing attractive, effective ecommerce websites.
+                    <a href="http://www.wearejh.com/" target="_blank">JH</a> <p>is a web agency working with exciting clients on challenging projects. They specialise in producing attractive, effective ecommerce websites.</p>
                 </li>
             </ul>
-        </section><!-- end .sponsors -->
+        </section>
 
-<!--        <div class="container">
-            <hr><article class="award">
 
-                <h1 class="award-title">Tech Startup of the Year Awards 2016</h1>
-                <p class="award-desc">We're searching for Nottingham's Tech Startup and Future Startup of the year. On the night our finalists will pitch their business to our panel of expert judges to see who wins the prize. Past winners include <a href="http://appinstitute.com">AppInstitute</a>, <a href="http://cronofy.com/">Cronofy</a>, <a href="http://www.ensek.co.uk/">ENSEK</a> and <a href="http://godine.co.uk">GoDine</a>.</p>
+        <section class="categories-front">
+            <header>
+                <h2>Startup Categories</h2>
+                <p>Only the most innovative and exciting startups need apply</p>
+            </header>
+            <ul class="category-list-front">
+              <li class="category-front">
+                    <img src="img/awards-2016/new-startup.jpg" alt="New Startup Awards" class="category-img-front">
+                     <h3 class="category-header-front">New Startup of the Year</h3>
+                     <p>This award is for new startups who have launched their service or product within the last two years. The startups can be pre-revenue and the emphasis here is on potential as well as success so far. The winner will receive £1000 in cash - our sponsors are still expanding and the prize list is growing. Follow us on twitter for additional prize updates!</p>
+                </li>
+              <li class="category-front">
+                    <img src="img/awards-2016/future-startup.jpg" alt="Future Startup Awards" class="category-img-front">
+                     <h3 class="category-header-front">Startup of the Future</h3>
+                     <p>This award is dedicated to people who have a great idea for a startup they think should happen. Whether a real company at pre-launch or not, the aim of the award is to reward the future potential of a startup idea. The winner will receive £500 in cash as a prize.</p>
+                </li>
+            </ul>
+        </section>
 
-                <h1 class="award-title">New Startup of the Year</h1>
-                <p class="award-desc">An award for new startups who have launched their service or product within the last two years. The startups can pre-revenue and the emphasis here is on potential as well as success so far.</p>
 
-                <h1 class="award-title">Startup of the Future</h1>
-                <p class="award-desc">An award dedicated to people who have a great idea for a startup they think should happen. Whether a real company at pre-launch or not, the aim of the award is to reward the future potential of a startup idea.</p>
 
-                <p class="award-desc">Prizes will be announced over the coming months. To enter send an email to <a href="mailto:nick.barker@awaremonitoring.com">nick.barker@awaremonitoring.com</a> and he'll send you your application form. To check out prizes from last year take a look at the <a href="awards/2015.html">Tech Startup Awards 2015</a> site.</p>
-            </article>
-        </div> -->
+<section class="judgining-panel">
+        <h2>The judging panel</h2>
+        <p>We are pleased to introduce the judging panel for the 2017 start up awards!</p>
+            <ul class="judge-list">
+                <li class="judge">
+                    <a href="https://www.linkedin.com/in/tom-goff-4037954" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/tomgoff.jpg" alt="Tom Goff">
+                    </a>
+                    <a class="judge__name" href="https://www.linkedin.com/in/tom-goff-4037954" target="_blank">Tom Goff</a>
+                    <span class="judge__role">Corporate Associate at Eversheds</span>
+                </li>
+                <li class="judge">
+                    <a href="https://www.linkedin.com/in/mark-onyett-354a29" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/markonyett.jpg" alt="Mark Onyett">
+                    </a>
+                    <a class="judge__name" href="https://www.linkedin.com/in/mark-onyett-354a29" target="_blank">Mark Onyett</a>
+                    <span class="judge__role">Partner at Blenheim Chalcot</span>
+                </li>
+                <li class="judge">
+                    <a href="https://www.linkedin.com/in/robertcawdron" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/robertcawdron.jpg" alt="Robert Cawdron">
+                    </a>
+                    <a class="judge__name" href="https://www.linkedin.com/in/robertcawdron" target="_blank">Robert Cawdron</a>
+                    <span class="judge__role">Director, Investments at British Business Bank</span>
+                </li>
+                <li class="judge">
+                    <a href="https://uk.linkedin.com/in/davideilbeck" target="_blank">
+                        <img class="judge__photo" src="../img/awards-2016/davideilbeck.jpg" alt="David Eilbeck">
+                    </a>
+                    <a class="judge__name" href="https://uk.linkedin.com/in/davideilbeck">David Eilbeck</a>
+                    <span class="judge__role">Managing Director, G2 Innovation</span>
+                </li>
+            </ul>
+</section>
+
+
 
         <section class="location">
             <h2>How to find us?</h2>
@@ -137,7 +181,7 @@
 
 <div class="contact">
     <h2>Contact The Organisers</h2>
-    <p>Nott Tuesday is run by Nick Barker, <a href="https://twitter.com/jhuskisson">Jamie Huskisson</a> &amp; <a href="https://twitter.com/martinsandhu">Martin Sandhu</a> .</p>
+    <p>Nott Tuesday is run by Nick Barker, <a href="https://twitter.com/jhuskisson">Jamie Huskisson</a> &amp; <a href="https://twitter.com/martinsandhu">Martin Sandhu</a>.</p>
     <p>If you’d like to feedback about a previous event, propose a talk or recommend a speaker you can reach out to us in the following ways</p>
     <p>
     <br>- Email: <a href="mailto:nick.barker@awaremonitoring.com">nick.barker@awaremonitoring.com</a> 
@@ -180,21 +224,6 @@
         });
 
 
-
-
-        google.maps.event.addListener(map, 'mousedown', function(event){
-          this.setOptions({scrollwheel:true});
-        });
-        google.maps.event.addListener(map, 'onclick', function(event){
-          self = this;
-          timer = setTimeout(function() {
-            self.setOptions({scrollwheel:true});
-          }, 750);
-        });
-        google.maps.event.addListener(map, 'mouseout', function(event){
-          this.setOptions({scrollwheel:false});
-          clearTimeout(timer);
-        });
       }
     </script>
     <script async defer
