Current files Wed 25 14:28

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="pragma" content="no-cache" />
 
+    <!-- OG META -->
+    <meta property="og:url" content="http://notttuesday.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Nott Tuesday: The meetup for Nottingham's tech scene" />
+    <meta property="og:description" content="Our free, monthly event features a guest speaker and time to meet fellow founders, entrepreneurs and technologists. Come share, support and unwind with us." />
+    <meta property="og:image" content="./og-index.jpg" />
+
+
     <!-- ICONS -->
     <link href="favicon.ico" rel="icon" type="image/ico">
     <meta name="msapplication-TileColor" content="#fff">
@@ -120,28 +128,28 @@
             <ul class="judge-list">
                 <li class="judge">
                     <a href="https://www.linkedin.com/in/tom-goff-4037954" target="_blank">
-                        <img class="judge__photo" src="../img/awards-2016/tomgoff.jpg" alt="Tom Goff">
+                        <img class="judge__photo" src="img/awards-2016/tomgoff.jpg" alt="Tom Goff">
                     </a>
                     <a class="judge__name" href="https://www.linkedin.com/in/tom-goff-4037954" target="_blank">Tom Goff</a>
                     <span class="judge__role">Corporate Associate at Eversheds</span>
                 </li>
                 <li class="judge">
                     <a href="https://www.linkedin.com/in/mark-onyett-354a29" target="_blank">
-                        <img class="judge__photo" src="../img/awards-2016/markonyett.jpg" alt="Mark Onyett">
+                        <img class="judge__photo" src="img/awards-2016/markonyett.jpg" alt="Mark Onyett">
                     </a>
                     <a class="judge__name" href="https://www.linkedin.com/in/mark-onyett-354a29" target="_blank">Mark Onyett</a>
                     <span class="judge__role">Partner at Blenheim Chalcot</span>
                 </li>
                 <li class="judge">
                     <a href="https://www.linkedin.com/in/robertcawdron" target="_blank">
-                        <img class="judge__photo" src="../img/awards-2016/robertcawdron.jpg" alt="Robert Cawdron">
+                        <img class="judge__photo" src="img/awards-2016/robertcawdron.jpg" alt="Robert Cawdron">
                     </a>
                     <a class="judge__name" href="https://www.linkedin.com/in/robertcawdron" target="_blank">Robert Cawdron</a>
                     <span class="judge__role">Director, Investments at British Business Bank</span>
                 </li>
                 <li class="judge">
                     <a href="https://uk.linkedin.com/in/davideilbeck" target="_blank">
-                        <img class="judge__photo" src="../img/awards-2016/davideilbeck.jpg" alt="David Eilbeck">
+                        <img class="judge__photo" src="img/awards-2016/davideilbeck.jpg" alt="David Eilbeck">
                     </a>
                     <a class="judge__name" href="https://uk.linkedin.com/in/davideilbeck">David Eilbeck</a>
                     <span class="judge__role">Managing Director, G2 Innovation</span>
