--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Nott Tuesday: The meetup for Nottingham&rsquo;s tech scene. For founders and entrepreneurs</title>
     <meta name="description" content="Our free, monthly event features a guest speaker and time to meet fellow founders, entrepreneurs and technologists. Come share, support and unwind with us.">
 
-    <!-- TiTo Initialise -->
-    <script src='https://js.tito.io/v1' async></script>
     <!-- META -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -65,8 +63,7 @@
                 <li class="time"><i class="icon time-icon"></i> 6:30pm&ndash;10:30pm</li>
                 <li class="venue"><i class="icon location-icon"></i> <a href="https://www.google.co.uk/maps/place/Antenna,+9A+Beck+St,+Nottingham+NG1+1EQ/@52.955938,-1.143181,17z/data=!4m2!3m1!1s0x4879c17de0dc5f45:0x4d78304762fccbec" target="_blank">Antenna</a></li>
             </ul>
-            <!--<p class="rsvp"><a class="button" href="https://www.meetup.com/Nott-Tuesday-Getting-Nottinghams-tech-scene-together/events/235654948/">RSVP via Meetup</a>-->
-            <div class="tito-wrap"><tito-button class="button tito-button" event="notttuesday/21-02-2017-tech-startup-awards">Free Ticket</tito-button></div>
+            <p class="rsvp"><a class="button cta-button" href="https://ti.to/notttuesday/21-02-2017-tech-startup-awards">Free Ticket</a>
             </p>
         </div>
         <div class="speaker">
@@ -84,20 +81,33 @@
                 <h2>Event Sponsors</h2>
                 <p>Our sponsors help us get great speakers in and provide drinks at our monthly events.</p>
             </header>
+
             <ul class="sponsor-list">
-              <li class="sponsor">
-                   <a href="http://www.eversheds.com" target="_blank"><img class="sponsor__logo" src="img/logo-eversheds.png" alt="Eversheds"></a>
-                   <a href="http://www.eversheds.com" target="_blank">Eversheds</a> <p>operates at the leading edge of business. They regularly advise on cases on behalf of the world's most powerful corporations and financial institutions.</p>
-              </li>
-              <li class="sponsor">
-                     <a href="http://www.paypal.com/" target="_blank"><img class="sponsor__logo" src="img/logo-paypal.png" alt="Paypal"></a>
-                     <a href="http://www.paypal.com/" target="_blank">Paypal</a> <p>makes it easy for businesses to get paid. Whether you&rsquo;re online or offline, in your shop or on the road, one simple PayPal account is all you need.</p>
+              <li class="sponsor half">
+                     <a href="https://rolleragency.co.uk/" target="_blank"><img class="sponsor__logo" src="img/sponsors/roller.svg" alt="Paypal"></a>
+                     <a href="https://rolleragency.co.uk/" target="_blank">Roller Agency</a> <p>makes it easy for businesses to get paid. Whether you&rsquo;re online or offline, in your shop or on the road, one simple PayPal account is all you need.</p>
                 </li>
-                <li class="sponsor">
+                <li class="sponsor half">
                     <a href="http://www.wearejh.com/" target="_blank"><img class="sponsor__logo" src="img/logo-jh.png" alt="JH"></a>
                     <a href="http://www.wearejh.com/" target="_blank">JH</a> <p>is a web agency working with exciting clients on challenging projects. They specialise in producing attractive, effective ecommerce websites.</p>
                 </li>
             </ul>
+
+            <ul class="sponsor-list">
+              <li class="sponsor third">
+                   <a href="http://www.eversheds.com" target="_blank"><img class="sponsor__logo" src="img/logo-eversheds.png" alt="Eversheds"></a>
+                   <a href="http://www.eversheds.com" target="_blank">Eversheds</a> <p>operates at the leading edge of business. They regularly advise on cases on behalf of the world's most powerful corporations and financial institutions.</p>
+              </li>
+              <li class="sponsor third">
+                     <a href="http://www.paypal.com/" target="_blank"><img class="sponsor__logo" src="img/logo-paypal.png" alt="Paypal"></a>
+                     <a href="http://www.paypal.com/" target="_blank">Paypal</a> <p>makes it easy for businesses to get paid. Whether you&rsquo;re online or offline, in your shop or on the road, one simple PayPal account is all you need.</p>
+                </li>
+                <li class="sponsor third">
+                    <a href="http://www.wearejh.com/" target="_blank"><img class="sponsor__logo" src="img/logo-jh.png" alt="JH"></a>
+                    <a href="http://www.wearejh.com/" target="_blank">JH</a> <p>is a web agency working with exciting clients on challenging projects. They specialise in producing attractive, effective ecommerce websites.</p>
+                </li>
+            </ul>
+
         </section>
 
 
@@ -111,14 +121,17 @@
                     <img src="img/awards-2016/new-startup.jpg" alt="New Startup Awards" class="category-img-front">
                      <h3 class="category-header-front">New Startup of the Year</h3>
                      <p>This award is for new startups who have launched their service or product within the last two years. The startups can be pre-revenue and the emphasis here is on potential as well as success so far. The winner will receive £1000 in cash - our sponsors are still expanding and the prize list is growing. Follow us on twitter for additional prize updates!</p>
+                     <a href="form/future-startup-form.html" class="align-margin"><div class="button startup-award">Enter Your Company</div></a>
                 </li>
               <li class="category-front">
                     <img src="img/awards-2016/future-startup.jpg" alt="Future Startup Awards" class="category-img-front">
                      <h3 class="category-header-front">Startup of the Future</h3>
                      <p>This award is dedicated to people who have a great idea for a startup they think should happen. Whether a real company at pre-launch or not, the aim of the award is to reward the future potential of a startup idea. The winner will receive £500 in cash as a prize.</p>
+                     <a href="form/new-startup-form.html" class="align-margin"><div class="button startup-award">Enter Your Company</div></a>
                 </li>
             </ul>
         </section>
+
 
 
 
@@ -204,6 +217,9 @@
 </div>
 
 </footer><!-- end .site-footer -->
+
+
+
 
 <!-- Google Analytics -->
 <script>
